# pong-sdl2-cpp

./: .clang-format  .gitignore  CHANGELOG.md  README.md  build  build-release  compile-release  conan-build  conan-install  conanfile.py  init  init-release  meson.build
docs/decisions/: 0000-use-fast-and-loose-decision-records.md  0001-app-subsystem-late-initialization.md  0002-do-not-use-namespaces.md  0003-do-not-wrap-sdl2-in-cpp.md  0004-do-not-wrap-logging-library.md  0005-game-state-transition-triggers-are-functions.md  0006-abstract-sdl2-events.md  0006-do-not-wrap-sdl2-events.md  0007-do-not-optimise-for-data-locality.md  0008-do-not-abstract-nor-optimise-collision.md  0009-ui-elements-are-entities.md
src/: main.cpp
src/core/: app.cpp  app.h  asset_system.cpp  asset_system.h  color.cpp  color.h  display.cpp  display.h  display_system.cpp  display_system.h  event_bus.cpp  event_bus.h  event_bus.tpp  font.cpp  font.h  rect.cpp  rect.h  renderer.cpp  renderer.h  rendering_system.cpp  rendering_system.h  text_system.cpp  text_system.h  texture.cpp  texture.h  vector2.h
src/core/tests/: app.single_object.cpp
src/game/: collision_system.cpp  collision_system.h  entity.cpp  entity.h  game.cpp  game.h  input_bus.cpp  input_bus.h  input_system.cpp  input_system.h  player.h  rect.cpp  rect.h
src/game/components/: direct_render_component.cpp  direct_render_component.h  input_component.cpp  input_component.h
src/game/entities/: ball.cpp  ball.h  countdown.cpp  countdown.h  fading_text.cpp  fading_text.h  main_menu.cpp  main_menu.h  paddle.cpp  paddle.h  score.cpp  score.h
